--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,13 @@ dependencies {
     implementation files('libs/java-client-4.1.2.jar')
     implementation files('libs/junit-4.12.jar')
     implementation files('libs/selenium-server-standalone-3.4.0.jar')
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation 'org.aspectj:aspectjweaver:1.9.19'
+    testImplementation 'io.qameta.allure:allure-junit5:2.23.0'
+    testImplementation 'io.qameta.allure:allure-selenide:2.23.0'
+    testImplementation 'io.qameta.allure:allure-commandline:2.23.1'
+    testImplementation 'io.qameta.allure:allure-rest-assured:2.23.0'
+    testImplementation 'io.qameta.allure:allure-java-commons:2.23.0'
 }
